--- a/index.html
+++ b/index.html
@@ -28,29 +28,31 @@
         <line x1="140" y1="150" x2="120" y2="180" class="figure-part"></line>
         <line x1="140" y1="150" x2="160" y2="180" class="figure-part"></line>
       </svg>
+      <!-- wrong letters -->
       <div class="wrong-letters-container">
         <div id="wrong-letters">
-          <p>Wrong</p>
-          <span>e,r,t,y</span>
+          <!-- <p>Wrong</p>
+          <span>e,r,t,y</span> -->
         </div>
       </div>
+      <!-- Word -->
       <div class="word" id="word">
-        <div class="letter">h</div>
+        <!-- <div class="letter">h</div>
         <div class="letter">e</div>
         <div class="letter">l</div>
         <div class="letter">l</div>
-        <div class="letter">o</div>
+        <div class="letter">o</div> -->
       </div>
       <!-- Container for final message -->
       <div class="popup-container" id="popup-container">
         <div class="popup">
-          <h2 id="final-message">You Have Won</h2>
+          <h2 id="final-message"></h2>
           <button id="play-button">Play Again</button>
         </div>
       </div>
     </div>
     <!-- Notification -->
-    <div class="notification-container" id="notification-container">
+    <div class="notification-container show" id="notification-container">
       <p>You have already entered this letter</p>
     </div>
     <script src="script.js"></script>
