--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="popup-container" id="popup-container">
         <div class="popup">
           <h2 id="final-message"></h2>
-          <button id="play-button">Play Again</button>
+          <button id="play-btn">Play Again</button>
         </div>
       </div>
     </div>
@@ -55,6 +55,7 @@
     <div class="notification-container show" id="notification-container">
       <p>You have already entered this letter</p>
     </div>
+    <button id="btn">Change Me</button>
     <script src="script.js"></script>
   </body>
 </html>
