--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Hangman</h1>
     <p>Find the hidden word - Enter a letter</p>
+
     <div class="game-container">
       <svg height="250" width="200" class="figure-container">
         <!-- Rod -->
@@ -55,7 +56,11 @@
     <div class="notification-container show" id="notification-container">
       <p>You have already entered this letter</p>
     </div>
-    <button id="btn">Change Me</button>
+    <div class="meaning-container">
+      <h1>HINT</h1>
+      <div id="meaning"></div>
+    </div>
+    <button id="btn">Change Background-color</button>
     <script src="script.js"></script>
   </body>
 </html>
